--- a/src/Componentes/Calculadora.css
+++ b/src/Componentes/Calculadora.css
@@ -3,7 +3,7 @@ button{
     height: 3em;
     font-size: 1.5em;
     border-radius: 1.2em;
-    margin: 0.3em
+    margin: 0.3em;
 }
 
 button:hover{
@@ -11,6 +11,27 @@ button:hover{
 }
 
 .wrapper{
-    background-color: darkslategray;
+    background-color: #765898;
     border-radius: 1em;
+    padding: 2em;
+
+}
+
+.mainOperator{
+    background-color: #ec9238;
+}
+
+.other{
+    background-color: #52d053;
+}
+
+.other2{
+    background-color: #d8533f;
+}
+
+.resultado{
+    color: #160606;
+    display: flex;
+    justify-content: center;
+    font-size: 3;
 }
